Fixes #138. Revamped dependencies, and ITs. Should now be runnable on Java 11 as well.